--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       color: var(--text);
       line-height: 1.6;
     }
+    html, body {
+      max-width: 100%;
+      overflow-x: hidden;
+    }
 
     header {
       padding: 4rem 2rem 3rem;
@@ -76,7 +80,7 @@
     /* Photos */
     .photo-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
       gap: 1rem;
     }
 
@@ -129,13 +133,14 @@
     /* Videos */
     .video-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
       gap: 1.5rem;
     }
 
     .video-grid iframe {
       width: 100%;
-      height: 200px;
+      height: auto;
+      aspect-ratio: 16 / 9;
       border-radius: 1rem;
       border: none;
     }
@@ -228,6 +233,23 @@
     @media (min-width: 900px) {
       .hero-text h1 {
         font-size: 4rem;
+      }
+    }
+    @media (max-width: 600px) {
+      .local-player {
+        flex-direction: column;
+        align-items: stretch;
+      }
+
+      .local-player img {
+        width: 100%;
+        height: auto;
+        max-height: 250px;
+      }
+
+      .controls {
+        flex-wrap: wrap;
+        justify-content: center;
       }
     }
 
@@ -461,9 +483,6 @@
     <!-- Music Player -->
     <section class="card player">
       <h2>Listen</h2>
-      <p style="color: var(--muted); margin-bottom: 1rem;">
-        Embedded player for your latest singles and fan favorites.
-      </p>
 
       <!-- Local MP3 Player -->
       <div class="local-player">
@@ -518,7 +537,7 @@
       © <span id="year"></span> SPECTRA · EPK
     </p>
     <p>
-      <a href="https://open.spotify.com/artist/6VqO07BB27vGYd7y4tvetq">Spotify</a> · <a href="https://www.youtube.com/@spectra9293">YouTube</a> · <a href="https://www.instagram.com/spectra.musicofficial">Instagram</a>
+      <a href="https://open.spotify.com/artist/6VqO07BB27vGYd7y4tvetq">Spotify</a> · <a href="https://www.youtube.com/@spectra9293">YouTube</a> · <a href="https://spectrabandofficial.bandcamp.com/">Bandcamp</a> · <a href="https://www.instagram.com/spectra.musicofficial">Instagram</a>
     </p>
   </footer>
 
