--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Spectra | Electronic Press Kit</title>
+  <title>Spectra | Official Site & EPK</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -673,7 +673,7 @@
 </main>
 
 <footer>
-  <p>© <span id="year"></span> SPECTRA · EPK</p>
+  <p>© <span id="year"></span> SPECTRA · OFFICIAL SITE & EPK</p>
 </footer>
 
 <!-- Lightboxes -->
