--- a/index.html
+++ b/index.html
@@ -458,13 +458,11 @@
   transform: scale(1.1);
 }
 
-/* Mobile Friendly */
 @media (max-width: 500px) {
   .social-bar {
-    top: auto;
-    bottom: 1rem;
-    right: 50%;
-    transform: translateX(50%);
+    position: static;
+    margin: 1rem auto 0;
+    justify-content: center;
     background: rgba(0,0,0,0.4);
     padding: 0.5rem 0.75rem;
     border-radius: 999px;
