--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       --accent: #4f8cff;
       --radius: 1.25rem;
     }
+a {
+  color: #ccd4fc; /* Changes link color to red */
+}
 
     * {
       box-sizing: border-box;
@@ -662,9 +665,9 @@
     <h2>Booking & Contact</h2>
 
     <p>
-      📧 <strong>Email:</strong> <a href="mailto:spectra.band.official@gmail.com">spectra.band.official@gmail.com</a><br />
-      🌐 <strong>Website:</strong> <a href="https://spectra.band">https://spectra.band</a><br />
-      📱 <strong>Instagram:</strong> <a href="https://www.instagram.com/spectra.musicofficial">@spectra.musicofficial</a>
+      <i class="fa-solid fa-envelope"></i> <strong>Email:</strong> <a href="mailto:spectra.band.official@gmail.com">spectra.band.official@gmail.com</a><br />
+      <i class="fa-solid fa-globe"></i> <strong>Website:</strong> <a href="https://spectra.band">https://spectra.band</a><br />
+      <i class="fa-brands fa-instagram"></i> <strong>Instagram:</strong> <a href="https://www.instagram.com/spectra.musicofficial">@spectra.musicofficial</a>
     </p>
   </section>
 
