--- a/index.html
+++ b/index.html
@@ -321,24 +321,31 @@ a {
       border: none;
     }
 
-    /* Carousel */
-    .carousel {
-      overflow-x: auto;
-      display: flex;
-      gap: 1rem;
-      scroll-snap-type: x mandatory;
-      padding-bottom: 0.5rem;
-    }
+/* iOS-safe horizontal scroll carousel */
+.carousel {
+  display: flex;
+  gap: 1rem;
+  overflow-x: auto;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch; /* THIS is the iPhone magic */
+  scroll-snap-type: x mandatory;
+  padding-bottom: 0.5rem;
+}
 
-    .carousel img {
-      flex: 0 0 75%;
-      max-width: 75%;
-      height: 180px;
-      object-fit: cover;
-      border-radius: 1rem;
-      scroll-snap-align: start;
-      cursor: pointer;
-    }
+.carousel::-webkit-scrollbar {
+  display: none; /* hides scrollbar on iOS/Chrome */
+}
+
+.carousel img {
+  flex: 0 0 auto;
+  width: 75%;
+  max-width: 75%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 1rem;
+  scroll-snap-align: start;
+}
+
 
     /* Footer */
     footer {
