more ios fix maybe

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 a {
   color: #ccd4fc; /* Changes link color to red */
 }
-
+.scrolling-element {
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+}
     * {
       box-sizing: border-box;
       margin: 0;
