--- a/index.html
+++ b/index.html
@@ -631,14 +631,14 @@ a {
     <h3 style="margin: 2rem 0 1rem;">Notable Past Shows</h3>
 
     <div class="carousel-wrapper">
-      <button class="carousel-btn left" id="prevShow">⏴</button>
+      <button class="carousel-btn left" id="prevShow">⏮</button>
       <div class="carousel" id="carouselTrack">
         <img src="img/shows/4sb.png" alt="Four Stroke Baron Tour">
         <img src="img/shows/pwodotour.png" alt="PWOD Tour">
         <img src="img/shows/vertagogo.png" alt="Vertagogo">
         <img src="img/shows/casbah.png" alt="Casbah">
       </div>
-    <button class="carousel-btn right" id="nextShow">⏵</button>
+    <button class="carousel-btn right" id="nextShow">⏭</button>
   </div>
   </section>
 
