--- a/index.html
+++ b/index.html
@@ -554,9 +554,9 @@ a {
     <div class="hero-gradient"></div>
   </div>
   <div class="hero-text">
-    <h1>SPECTRA</h1>
+    <h1>SPECTRA - Official Site & EPK</h1>
     <p>
-      A five-piece instrumental progressive metal band driven by two extended-range guitars, heavy synths, bombastic drumming, and a five-string bass, creating a mix of crushing riffs and upbeat melodies.
+      A five-piece Canadian instrumental progressive metal band driven by two extended-range guitars, heavy synths, bombastic drumming, and a five-string bass, creating a mix of crushing riffs and upbeat melodies. Toronto, ON 🇨🇦
     </p>
   </div>
 </header>
